[FIX] Button bottom margin on small screens

--- a/src/assets/scss/framework/base/footer/_footer.scss
+++ b/src/assets/scss/framework/base/footer/_footer.scss
@@ -142,9 +142,6 @@
         display: table;
         margin-right: auto;
         margin-left: auto;
-
-        + .platform-btn, + .install-btn  {
-            margin-top: 1rem;
-        }
+        margin-bottom: 1rem;
     }
 }
